bad/assign_field_bool_mcall_string.example_compiler_output
ERROR
[1mbad/assign_field_bool_mcall_string.lat:10:20: [1;31merror: [0;1massigning to `boolean` from incompatible type `string`[m
	(new M).foo().fld = "";
	                  [1;32m^[m
